
02/07/2002 (Jir)
- protection code against DoS/roller (QUIT_BAN_MODE)
- GoI/Manashield ends when the player attacks/fires/casts etc.
[H][C] spell_info array is enlarged to allow future expansion.
[B] +To RDam was displayed wrong when using =dam
[B] pet/golem left m_idx when changing the wpos.
[B] pet attacked its master.
[B] couldn't establish a connection due to too large packet size.


** [B] stands for Bugfix.
** [C] stands for Client changes.
** [H] stands for Hack and rebalancement :)
** [P] stands for Porting from ToME.

=============================================================================
things to do before 4.0.0

- implement guest-account
- rebalance skill-points
- devise a nice way to control ego-item generation w/o luck
- fix gfx
- refine pk code
- source-code cleanup
- sort ?_info.txt (they are quite messy now)
- export configurable things to tomenet.cfg
- a spoonful of documentation for skill system

(multi-dungeon, multi-town, terrains, pets etc. are put off after 4.0.0 ...)


=============================================================================
concisely: what's hot now?

- new spells!
- multiple-dungeons stuff
  + we should preserve level_up_y etc. for manually-added dungeons/towers.
- quest system
- skill system
  + SKILL_CLIMB
  + spell_info should be redone
  * a mage would just raise 'Sorcery' to 10 for Wraithform..
    is it within the design?
- LUA hook
- csfunc
- alignment (let's wait for EE :)

=============================================================================
below this line are the unfixed bugs known:

[B] House doors are still said to crash sometimes. (door even vanishes??)
[B] wpos display hides wound states(eg.'Deep Gash')
[B] 'You hit it.' etc in town (99% problem in zcave.m_idx)
    sometimes, monsters attack the player from nowhere.. prolly same root?
	* this only happens when rebooting the server and caves lost.
[B][C] chat-history contains lines with 'mindcrafter'.
    (do_cmd_messages_chatonly)