@@ -6,8 +6,8 @@
             One Ring to bring them all and in the darkness bind them
                   In the land of Mordor where the shadows lie"
                                 "Lord of The Rings", J.R.R.Tolkien
- - TomeNET 4.0.0 development version  (Netcode debug: 002)
- - skill system is being implemented. ('G' to check and enhance)
+ - TomeNET 4.0.0 development version
+ - Skill system is implemented. ('G' to check and enhance)
  - Detect traps can NOT fail;  detection spells are radius-based now.
  - items can stack on the floor now. (but not inside a house!)
  - A guild system is implemented.  - Player alignment is coming soon?
